# track-broom

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  opencode.json  plan-generate-test-mp3s.md  pyproject.toml  rewrite-git-history.sh
.devcontainer/: devcontainer.json  setup-venv.sh
docs/: audio-format-note.md  id3-tag-reference.md  plan-m4a-test-files.md
scripts/: generate_test_tones.py  generate_test_tones_flac.py  generate_test_tones_m4a.py  generate_test_tones_mp3.py
src/track_broom/: __init__.py  __main__.py  cli.py  filetree.py  tags.py
src/trackoon/: __main__.py  cli.py  scanner.py  tags.py
tests/: conftest.py  test_cli_list.py  test_filetree.py  test_fixtures.py  test_flac.py  test_generate_tone.py  test_m4a.py  test_mp3.py  test_ogg.py  test_sample_fixture_dir.py  test_scanner.py  test_wma.py
tests/fixtures/: builders.py  generate_test_tones_flac.py  generate_test_tones_m4a.py  generate_test_tones_mp3.py  generate_test_tones_ogg.py  generate_test_tones_wma.py
tests/utils/: __init__.py
